--- a/src/app/quiz-page/quiz-page.component.html
+++ b/src/app/quiz-page/quiz-page.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="d-flex justify-content-center align-items-center buttons-container text-center">
             <div>
-                <button type="button" class="btn btn-primary mb-3 d-block">Cash Out</button>
+                <button type="button" class="btn btn-primary mb-3 d-block" (click)="cashOut()">Cash Out</button>
                 <button type="button" class="btn btn-success d-block">50 / 50 Joker</button>
             </div>
         </div>
